--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ nltk==3.9.1
 textblob==0.18.0.post0
 scikit-learn==1.3.2
 seaborn==0.13.2
-tensorflow==2.16.1
+tensorflow==2.18.0
 transformers==4.46.0
-tf-keras==2.15.0
+tf_keras==2.18.0
 vaderSentiment==3.3.2
 emoji==1.7.0
